Add Supabase integration and new command to set channel
- Updated .env.example to include GOOGLE_API_KEY, SUPABASE_URL, and SUPABASE_KEY.
- Modified bot.py to implement a new command `/setchannel` for saving server and channel IDs to Supabase.
- Changed bot command prefix to "~".
- Updated README.md with instructions for Supabase setup and command usage.
- Added supabase dependency to requirements.txt.

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,4 @@
 DISCORD_BOT_TOKEN=your-bot-token-here
+GOOGLE_API_KEY=your-google-api-key-here
+SUPABASE_URL=https://your-project.supabase.co
+SUPABASE_KEY=your-anon-or-service-role-key
